--- a/SpringBoot/wordcount-react-app/src/App.css
+++ b/SpringBoot/wordcount-react-app/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+body {
+    background-color: #f2f2ee;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body:after {
+    top:145px;
+    width:100%;
+    height:600px;
+    position:absolute;
+    z-index:-1;
+    background-color:#ffc009;
+    content:"";
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+    width: 750px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#word {
+    font-weight: bold;
+    color: #ffc009;
+}
+#cloud {
+    font-weight: normal;
 }
 
-.App-link {
-  color: #61dafb;
+.contentArea {
+    background-color: #ffffff;
+    width: 726px;
+    height: 550px;
+    border-radius: 15px;
+    margin-top: 20px;
+    
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchBox {
+    width: 692px;
+    height: 55px;
+    border-radius: 15px;
+    border: 0;
+    outline: none;
+    margin-top: 50px;
+    margin-left: 10px;
+    font-size: 16px;
+    padding-left: 30px;
+}
+
+.newsTitle {
+    font-size: 20px;
+}
+
+.newsInfo {
+    font-size: 12px;
+}
+
+.imgThumb {
+    width: 80px;
+    height: 80px;
+    border-radius: 5px;
+    overflow: hidden;
 }
