--- a/SpringBoot/wordcount-react-app/src/App.css
+++ b/SpringBoot/wordcount-react-app/src/App.css
@@ -30,7 +30,11 @@ body:after {
     height: 550px;
     border-radius: 15px;
     margin-top: 20px;
-    
+}
+
+.smButton {
+    height: 28px;
+    margin-bottom: 3px;
 }
 
 .searchBox {
